# HillFinder

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
design_handoff_hillfinder/: README.md
design_handoff_hillfinder/prototype/: HillFinder.html
design_handoff_hillfinder/prototype/src/: app.jsx  compare.jsx  data.jsx  detail.jsx  filter-rail.jsx  grid.jsx  icons.jsx  mapfirst.jsx  mode-switcher.jsx  plan.jsx  profile.jsx  results.jsx  themes.jsx  topomap.jsx  workout-card.jsx
pipeline/: README.md  detect_hills.py  download_dem.py  download_osm.py  export_hills_json.py  extract_ways.py  ground_truth_eval.py  pyproject.toml  sample_elevation.py
pipeline/data/: ground_truth.csv
scripts/: generate-seed-hills.mjs  validate-hills.mjs
src/: App.tsx  main.tsx  styles.css
src/components/: bottom-sheet.tsx  detail-map.tsx  detail-view.tsx  elevation-profile.tsx  filter-rail.tsx  hill-card.tsx  hill-map.tsx  results-view.tsx  skeleton-card.tsx  surface-badge.tsx  town-selector.tsx
src/data/: hills.json  towns.json
src/lib/: filters.ts  geo.ts  hash-route.ts  hills.ts  hover-context.tsx  towns.ts  types.ts  use-filters.ts  validate.ts
